[gd_scene load_steps=3 format=3 uid="uid://highscore_menu"]

[ext_resource type="Script" path="res://scripts/highscore_menu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_left = 15
corner_radius_top = 15
corner_radius_right = 15
corner_radius_bottom = 15

[node name="HighscoreMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 80.0
offset_right = -40.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 42
text = "HIGHSCORES"
horizontal_alignment = 1

[node name="TabButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EndlessTab" type="Button" parent="VBoxContainer/TabButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_tab")
text = "ENDLOS"

[node name="StoryTab" type="Button" parent="VBoxContainer/TabButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_tab")
text = "STORY"

[node name="ScoresContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(180, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 22
text = "Zur√ºck"
